[package]
name = "rocket_cc_file_server"
version = "0.1.0"
authors = ["Yannick Wegel <dev@pizzaboi.de>"]
edition = "2021"

description = "A custom FileServer providing better cache control for the Rocket web framework."
readme = "README.md"

[dependencies]
rocket = "0.5.0-rc.2"

httpdate = "1.0.2"

# maybe add feature for rust chrono and rust time
# chrono = "0.4"