[package]
name = "rocket_cc_file_server"
version = "0.1.0-alpha.1"
authors = ["Yannick Wegel <dev@pizzaboi.de>"]
edition = "2021"

license = "MIT"
repository = "https://github.com/DerPizzaBoi/rocket_cc_file_server"
description = "A custom FileServer providing better cache control for the Rocket web framework."
readme = "README.md"

keywords = ["rocket", "Cache-Control", "caching", "max-age"]
categories = ["web-programming"]

[dependencies]
rocket = "0.5.0-rc.2"

httpdate = "1.0.2"

# [[example]]
# name = "simple_setup"
# path = "examples/simple_setup.rs"

# maybe add feature for rust chrono and rust time
# chrono = "0.4"